[package]
name = "flayers"
version = "0.1.0"
authors = ["Marko Mikulicic <mmikulicic@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.0.25"
tar = "0.4.38"
reqwest = { version = "0.11.15", features = [ "blocking" ] }
anyhow = "1.0"
structopt = "0.3"
